--- a/welcome.html
+++ b/welcome.html
@@ -25,67 +25,7 @@
             </a>
         </div>
         <div id="post-page-content">
-            <div id="content-main-heading">
-                <div id="empty-space-main-heading"></div>
-                <div id="main-heading-space">
-                    <h1>Welcome!!! &#127797; </h1>
-                </div>
-            </div>
-            <div class="h-divider"></div>
-            <div id="first-line">
-                <div class="first-row">
-                    <img src="images/blog-image.png" alt="blog">
-                </div>
-                <div class="v-divider"></div>
-                <div class="second-row">
-                    <div class="line-heading">
-                        <h2>What is a blog?</h2>
-                    </div>
-                    <div class="divider-2"></div>
-                    <div class="line-content">
-                        <p>I'm sure most of the people who opened this knows what a blog is, but for those who doesn't, a blog, according to Cambridge dictionary, is "a regular record of your thoughts, opinions, or experiences that you put on the internet for other people to read". So, in my opinion, it might serve like a public journal. </p>
-                    </div>
-                </div>
-            </div>
-            <div class="h-divider"></div>
-            <div id="second-line">
-                <div class="first-row-middle">
-                    <div class="line-heading">
-                        <h2>Who am I?</h2>
-                    </div>
-                    <div class="divider-2"></div>
-                    <div class="line-content">
-                        <p>
-                            For those who doesn't know, my name is Robert Ruse. I'm a romanian teenager learning at one of the oldest high school from Bucharest and, also, a kyokushin karate fighter. This is one of the most complex martial art and, also, one of the most complex sport. I say this because this sport doesn't teach you how to defend yourself. In my opinion it prepares you for facing life and builds characters. As Mas Oyama, the founder of this martial art, said: "Karate is not a game. It is not a sport. It is not even a system of self-defense. Karate is half physical exercise and half spiritual. The karateist who has given the necessary years of exercise and meditation is a tranquil person. He is unafraid. He can even be calm in a burning building.".
-                        </p>
-                        <p>
-                            Also, I have to say I'm a website creator, even I'm just a beginner. I build this site dedicating about 4 days of my life to it and I have to say I'm proud of what I  did. In case you want a site to start your business, a blog or an online visit card, you can contact me.
-                        </p>
-                    </div>
-                </div>
-                <div class="v-divider"></div>
-                <div class="second-row-middle">
-                    <img src="images/question-image.jpg" alt="Who?">
-                </div>
-            </div>
-            <div class="h-divider"></div>
-            <div id="third-line">
-                <div class="first-row">
-                    <img src="images/RobertRuse.jpeg" alt="Who?">
-                </div>
-                <div class="v-divider"></div>
-                <div class="second-row">
-                    <div class="line-heading">
-                        <h2>Why do I do this?</h2>
-                    </div>
-                    <div class="divider-2"></div>
-                    <div class="line-content">
-                        <p>Maybe the people who knows me wonder themselves why I chose this, why I decided to build my own blog. They know that I was a shy guy who didn't open his mouth as long as nobody asked him something. Well, the answer is a little bit more complex, but I'm gonna make it simple. I do this, first, because I want to be a better version of me and, second, because I want to share with you my experience and my thoughts, hoping I will make you not to make the same mistakes as I do.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="h-divider"></div>
+                <h1>It's coming soon... STAY TUNED!!! &#128123; </h1>
         </div>
         <div id="contact-info-post-page">
             <h2>For more you can follow me on:</h2>
