--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
                     <div class="divider"></div>
                     <div id="about-me-space">
                         <p>
-                            I'm a romanian teenager learning at one of the oldest high schools from Bucharest. I'm a kyoukushin karate fighter and a person who consider that education is one of the most powerful weapon of a society. I think nothing should stop us from achieving our goals as long as we do our best to achieve them. I am here to share with you my experience and my thoughts. Hope you'll enjoy reading my blog!
+                            If you clicked the "About" bottom, I suppose you are curious who I am. Well, I have to say that I'm a romanian teenager learning at one of the oldest high schools from Bucharest, a kyokushin fighter and a web designer(even I'm just a beginner).
                         </p>
-                        <p>P.S: As you might suppose this site was created by me.</p>
+                        <p>P.S: If you want to find out more about me, don't hesitate to click the bttons below!!! </p>
                     </div>
                     <div class="divider"></div>
                     <div id="contact-info-about-page">
