--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         <p>
                             If you clicked the "About" bottom, I suppose you are curious who I am. Well, I have to say that I'm a romanian teenager learning at one of the oldest high schools from Bucharest, a kyokushin fighter and a web designer(even I'm just a beginner).
                         </p>
-                        <p>P.S: If you want to find out more about me, don't hesitate to click the bttons below!!! </p>
+                        <p>P.S: If you want to find out more about me, don't hesitate to check the links below!!! </p>
                     </div>
                     <div class="divider"></div>
                     <div id="contact-info-about-page">
