--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     
     <body>
             <div id="nav-bar-home-page">
-                <a href="about.html">
-                    <div id="about-btn" class="nav-bar-item btn">&#9924; About</div>
-                </a>
                 <a href="index.html">
                     <div class="nav-bar-item btn">&#127917; Home</div>
                 </a>
@@ -25,7 +22,7 @@
             </div>
             <div id="home-page-content">
                 <div id="main-content-box-home-page">
-                    <h1> Hello everyone!!! <br> Check my first post <a href="welcome.html">here</a> &#127770;</h1>
+                    <h1> Hello everyone!!! <br> Check out my first post <a href="welcome.html">here</a> &#127770;</h1>
                 </div>
             </div>
     </body>
