--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -12,19 +12,23 @@
     </head>
     
     <body>
-            <div id="nav-bar-home-page">
-                <a href="index.html">
-                    <div class="nav-bar-item btn">&#127917; Home</div>
-                </a>
-                <a href="posts.html">
-                    <div class="nav-bar-item btn">&#127796; Posts</div>
-                </a>
+        <div id="nav-bar-home-page">
+            <a href="index.html">
+                <div class="nav-bar-item btn">&#127917; Home</div>
+            </a>
+            <a href="posts.html">
+                <div class="nav-bar-item btn">&#127796; Posts</div>
+            </a>
+        </div>
+        <div id="content-box">
+            <div id="main-content">
+                <h1> Hi friends!</h1>
+                <p> My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest, a kyokushing fighter, a web designer and actually a blogger too.</p>
             </div>
-            <div id="home-page-content">
-                <div id="main-content-box-home-page">
-                    <h1> Hello everyone!!! <br> Check out my first post <a href="welcome.html">here</a> &#127770;</h1>
-                </div>
+            <div id="hoping">
+                <h1> Hope you'll enjoy reading my blog!!!</h1>
             </div>
+        </div>
     </body>
 
 </html>
