--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="welcome.css">
+        <link rel="stylesheet" href="posts.css">
         <title>Welcome!</title>
     </head>
     <body>
