--- a/posts.html
+++ b/posts.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="posts.css">
-        <title>Welcome!</title>
+        <title>Posts</title>
     </head>
     <body>
     
