--- a/The-pandemic-and-my-personal-expirience.html
+++ b/The-pandemic-and-my-personal-expirience.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="The%20pandemic%20and%20my%20personal%20expirience.css">
+        <link rel="stylesheet" href="The-pandemic-and-my-personal-expirience.css">
         <title>The pandemic and my personal expirience</title>
     </head>
     <body>
