--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,7 @@
                     <div id="content-welcome-empty-space">
                         <img src="images/covid.png">
                     </div>
-                    <a href="The%20pandemic%20and%20my%20personal%20expirience.html">
+                    <a href="The-pandemic-and-my-personal-expirience.html">
                         <div id="content-welcome-heading">
                             <h1>The pandemic and my personal expirience</h1>
                         </div>
