--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="content-box">
             <div id="main-content">
                 <h1> Hi friends!</h1>
-                <p> My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest, a kyokushing fighter, a web designer and a blogger.</p>
+                <p> My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest, a kyokushin fighter, a web designer and a blogger.</p>
             </div>
             <div id="hoping">
                 <h1> Hope you'll enjoy reading my blog!!!</h1>
