Update and rename The-pandemic-and-my-personal-expirience.html to The-pandemic-and-my-personal-experience.html

--- a/The-pandemic-and-my-personal-experience.html
+++ b/The-pandemic-and-my-personal-experience.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="The-pandemic-and-my-personal-expirience.css">
+        <link rel="stylesheet" href="The-pandemic-and-my-personal-experience.css">
         <title>The pandemic and my personal expirience</title>
     </head>
     <body>
@@ -29,7 +29,7 @@
         <div id="content-space">
             <div id="content-heading" class="heading"></div>
             <header>
-                <h1> The pandemic and my personal expirience </h1>
+                <h1> The pandemic and my personal experience </h1>
             </header>
             <div class="divider"></div>
             <div class="no-see-divider"></div>
