--- a/posts.html
+++ b/posts.html
@@ -70,7 +70,7 @@
                     </div>
                     <a href="The-pandemic-and-my-personal-expirience.html">
                         <div id="content-welcome-heading">
-                            <h1>The pandemic and my personal expirience</h1>
+                            <h1>The pandemic and my personal experience</h1>
                         </div>
                     </a>
                 </div>
