--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Who am I? Well... my name is Robert and I'm a romanian teenager, a website creator, a kyokushin fighter and a blogger.">
+        <meta name="keywords" content="Robert Ruse, Web site creator, Blog, Blog post, Who am I?">
+        <meta name="author" content="Robert Ruse">
+        <meta http-equiv="refresh" content="30">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap" rel="stylesheet">
