--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <script type="text/jscript" src="app.js"></script>
+        <meta name="author" content="Robert Ruse">
+        <meta name="description" content="My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest. Also, I'm a kyokushin fighter and a web developer. Hope you'll enjoy reading my blog!">
         <title>Home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +38,7 @@
         <div id="main">
             <div id="main-box" class="box">
                 <div id="box-heading">
-                    <img src="images/RobertRuse.jpeg">
+                    <img src="images/RobertRuse.jpeg" alt="Robert Ruse">
                     <div class="title">
                         <h1>Robert Ruse</h1>
                     </div>
