--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <script type="text/jscript" src="app.js"></script>
         <meta name="author" content="Robert Ruse">
+        <meta name="theme-color" content=" rgba(165, 165, 162, 0.9)">
         <meta name="description" content="My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest. Also, I'm a kyokushin fighter and a web developer. Hope you'll enjoy reading my blog!">
         <title>Home</title>
         <meta charset="utf-8">
