--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <script type="text/jscript" src="app.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="/What-Happened-16x16.ico" />
+        <link rel="apple-touch-icon" href="/What-Happened-72x72.png" sizes="72x72" />
         <meta name="author" content="Robert Ruse">
         <meta name="theme-color" content=" rgba(165, 165, 162, 0.9)">
         <meta name="description" content="My name is Robert and I'm a romanian teenager learning at one of the oldest high schools from Bucharest. Also, I'm a kyokushin fighter and a web developer. Hope you'll enjoy reading my blog!">
