--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
     <head>
         <script type="text/jscript" src="app.js"></script>
-        <link rel="shortcut icon" type="image/x-icon" href="/apple-icon-16x16.ico">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-24x24.png" sizes="24x24">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-32x32.png" sizes="32x32">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-48x48.png" sizes="48x48">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-96x96.png" sizes="96x96">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-128x128.png" sizes="128x128">
-        <link rel="shortcut icon" type="image/png" href="/apple-icon-196x196.png" sizes="196x196">
-        <link rel="apple-touch-icon" href="/apple-icon-57x57.png" sizes="57x57">
-        <link rel="apple-touch-icon" href="/apple-icon-60x60.png" sizes="60x60">
-        <link rel="apple-touch-icon" href="/apple-icon-72x72.png" sizes="72x72">
-        <link rel="apple-touch-icon" href="/apple-icon-76x76.png" sizes="76x76">
-        <link rel="apple-touch-icon" href="/apple-icon-114x114.png" sizes="114x114">
-        <link rel="apple-touch-icon" href="/apple-icon-120x120.png" sizes="120x120">
-        <link rel="apple-touch-icon" href="/apple-icon-144x144.png" sizes="144x144">
-        <link rel="apple-touch-icon" href="/apple-icon-152x152.png" sizes="152x152">
+        <link rel="shortcut icon" type="image/x-icon" href="/images/apple-icon-16x16.ico">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-24x24.png" sizes="24x24">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-32x32.png" sizes="32x32">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-48x48.png" sizes="48x48">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-96x96.png" sizes="96x96">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-128x128.png" sizes="128x128">
+        <link rel="shortcut icon" type="image/png" href="/images/apple-icon-196x196.png" sizes="196x196">
+        <link rel="apple-touch-icon" href="/images/apple-icon-57x57.png" sizes="57x57">
+        <link rel="apple-touch-icon" href="/images/apple-icon-60x60.png" sizes="60x60">
+        <link rel="apple-touch-icon" href="/images/apple-icon-72x72.png" sizes="72x72">
+        <link rel="apple-touch-icon" href="/images/apple-icon-76x76.png" sizes="76x76">
+        <link rel="apple-touch-icon" href="/images/apple-icon-114x114.png" sizes="114x114">
+        <link rel="apple-touch-icon" href="/images/apple-icon-120x120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="/images/apple-icon-144x144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="/images/apple-icon-152x152.png" sizes="152x152">
         <meta name="application-name" content="RRF">
         <meta name="msapplication-TileColor" content="#FFFFFF">
         <meta name="msapplication-square64x64logo" content="robertruse.me/apple-icon-64x64.png">
