--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav>
-            <a href="mail-page.html" class="rrf-blog-nav-bar-option"><i class="far fa-envelope-open"></i></a>
+            <a href="mailto: &#114;&#114;&#111;&#098;&#101;&#114;&#116;&#102;&#108;&#111;&#114;&#101;&#110;&#116;&#105;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" class="rrf-blog-nav-bar-option"><i class="far fa-envelope-open"></i></a>
             <a href="https://www.instagram.com/robertxruse/" class="rrf-blog-nav-bar-option"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/robert.ruse.750" class="rrf-blog-nav-bar-option"><i class="fab fa-facebook"></i></a>
             <h1>RRF</h1>
